--- a/styles/logged_page.css
+++ b/styles/logged_page.css
@@ -257,7 +257,7 @@ footer {
     left: 0;
     top: 0;
     background-color: #343434;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     opacity: 98%;
@@ -287,7 +287,7 @@ footer {
 }
 
 
-#modal-items > .modal-room,.modal-bathroom{
+#modal-items > #modal-room,#modal-bathroom{
     width: 14.56rem;
     height: 4rem;
     background-color: #E9ECF2;
@@ -297,15 +297,20 @@ footer {
     line-height: 2.25rem;
     text-align: left;
     color: #000;
-    text-align: center;
-    padding-left: 4.2rem ;
-    padding-right: 4.2rem ;
+    padding-left: 3.5rem ;
+    padding-right: 1rem ;
     padding-top: 0.93rem ;
     padding-bottom: 0.93rem ;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
 }
 
+#modal-room,#modal-bathroom > span {
+    
+}
 
-#modal-items > .modal-dimensions{
+#modal-items > #modal-dimensions{
     font-family: Poppins;
     font-size: 1.5rem;
     font-weight: 400;
@@ -315,14 +320,14 @@ footer {
 
 }
 
-.modal-items-2{
+#modal-items-2{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center
 }
 
-.modal-items-2 > .modal-price{
+#modal-items-2 > #modal-price{
     height: 3.75rem;
     width: 14.62rem ;
     font-family: Poppins;
@@ -334,7 +339,7 @@ footer {
 
 }
 
-.modal-items-2 > .button-purchase{
+#modal-items-2 > #button-purchase{
     height: 4.25rem;
     width: 14.37rem ;
     background-color: #FE8100;
