--- a/styles/login_page.css
+++ b/styles/login_page.css
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 13.5rem;
+    padding-left: 13.625rem ;
     padding-right: 13.5rem;
     gap: 1.375rem;
 }
@@ -83,7 +83,7 @@ header > #logotype >  #header-title-text{
 }
 
 
-/* Corpo da página */
+/* Page main */
 
 section {
 
@@ -101,7 +101,7 @@ section {
 
 }
 
-/* Container de formulário */
+/* Form Container */
 
 .login-form-container{
 
@@ -200,7 +200,7 @@ form > #login-form-button:focus{
     text-decoration: none;
 }
 
-/*  Divisórias*/
+/*  Dividers*/
 
 #divider-line-horizontal{
     background-color: #d8d8d8;
@@ -215,7 +215,7 @@ form > #login-form-button:focus{
 }
 
 
-/*  Container com Imagem*/
+/*  Image Container */
 
 .login-image-container{
 
