--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@
 
 @import url('./styles/error_page.css');
 
+@import url('./styles/login_page_mobile.css');
+
+@import url('./styles/error_page_mobile.css');
+
 * {
     margin: 0;
     padding: 0;
