--- a/styles/login_page.css
+++ b/styles/login_page.css
@@ -83,6 +83,7 @@ header > #logotype >  #header-title-text{
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 0.75rem;
 }
 
 #navigation-loggout > a {
