--- a/styles/login_page.css
+++ b/styles/login_page.css
@@ -94,7 +94,7 @@ header > #logotype >  #header-title-text{
 
 /* Page main */
 
-section {
+main {
 
     display: flex;
     align-items: center;
@@ -103,10 +103,7 @@ section {
     flex-wrap: wrap;
     gap: 6.25rem;
     margin-top: 4.25rem;
-    margin-bottom: 3.25rem;
-    margin-left: 5.5rem;
-    margin-right: 5.5rem;
-
+    margin-bottom: 2.9375rem;
 
 }
 
@@ -115,7 +112,7 @@ section {
 .login-form-container{
 
     height: 55.8125rem;
-    width: 38.8125rem;
+    width:  38.8125rem ;
     background-color: #FBFBFB;
     border-radius: 1.625rem;    
     display: flex;
@@ -141,7 +138,7 @@ section {
     display: flex;
     width: 29.25rem;
     flex-direction: column;
-    margin-bottom: 6.3rem;
+    
 
 }
 
@@ -215,6 +212,7 @@ form > #login-form-button:focus{
     background-color: #d8d8d8;
     height: 0.125rem;
     width: 29.25rem;
+    margin-top: 6.375rem;
 }
 
 #divider-line-vertical{
