--- a/styles/logged_page.css
+++ b/styles/logged_page.css
@@ -250,6 +250,7 @@ footer {
     width: 3.75rem ;
     border-radius: 50%;
     background-color: #E9ECF2;
+    transition: all 0.5s ease-in-out;
 }
 
 /* Modal */
